@@ -71,7 +71,8 @@ acceptance_tests(
         ] },
       # various edge cases that are difficult to accomodate
       { file => 'email.json', group_description => 'validation of e-mail addresses', test_description => [ 'an invalid domain', 'an invalid IPv4-address-literal' ] },
-      { file => 'hostname.json', group_description => 'validation of host names', test_description => 'trailing dot' },
+      { file => 'hostname.json', group_description => 'validation of host names', test_description => [ 'trailing dot', 'contains "--" in the 3rd and 4th position' ] },
+      { file => 'hostname.json', group_description => 'validation of A-label (punycode) host names' },
       { file => 'iri.json', group_description => 'validation of IRIs',  # see test suite issue 395
         test_description => 'an invalid IRI based on IPv6' },
       { file => 'idn-hostname.json',
