@@ -66,6 +66,7 @@ acceptance_tests(
         ] },
       # various edge cases that are difficult to accomodate
       { file => 'hostname.json', group_description => 'validation of host names', test_description => 'trailing dot' },
+      { file => 'hostname.json', group_description => 'validation of A-label (punycode) host names' },
       { file => 'uri.json',
         test_description => 'validation of URIs',
         test_description => 'an invalid URI with comma in scheme' },  # Mojo::URL does not fully validate
