@@ -70,7 +70,8 @@ acceptance_tests(
           !$ENV{AUTHOR_TESTING} && !eval { require Net::IDN::Encode; 1 } ? 'idn-hostname.json' : (),
         ] },
       # various edge cases that are difficult to accomodate
-      { file => 'hostname.json', group_description => 'validation of host names', test_description => 'trailing dot' },
+      { file => 'hostname.json', group_description => 'validation of host names', test_description => [ 'trailing dot', 'contains "--" in the 3rd and 4th position' ] },
+      { file => 'hostname.json', group_description => 'validation of A-label (punycode) host names' },
       { file => 'iri.json', group_description => 'validation of IRIs',  # see test suite issue 395
         test_description => 'an invalid IRI based on IPv6' },
       { file => 'idn-hostname.json',
