@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - allow export of JSON::Schema::Modern::Utilities::is_bool
+          - adjust acceptance tests to handle new failure cases in the test
+            suite for the hostname format
 
 0.621     2025-10-30 17:56:52Z
           - adjust acceptance tests to handle new failure cases in the test
